--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanzify - AI Presentation Generator</title>
-    <meta name="description" content="Transform your ideas into beautiful presentations with AI-powered Tanzify" />
+    <title>Stanzify - AI Presentation Generator</title>
+    <meta name="description" content="Transform your ideas into professional presentations with AI-powered Stanzify" />
   </head>
   <body>
     <div id="root"></div>
